# sshl

./: .gitignore  CLAUDE.md  build-renderer.cjs  build-renderer.js  main.js  package.json  pnpm-lock.yaml
assets/css/: app-runtime.css  connection-dialog.css  file-manager.css  fonts.css  main.css  settings-dialog.css  terminal.css
assets/js/: connection-manager.js  file-manager.js  icons.js  ipc-bridge.js  main-entry.js  session-manager.js  settings.js  terminal-manager.js  ui-manager.js
scripts/: bench-ssh.js  deploy.sh
services/: config-store.js  ssh-service.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_store.rs  crypto_store.rs  db.rs  error.rs  lib.rs  main.rs  sftp.rs  ssh.rs  state.rs  system_fonts.rs
tauri-app/: .gitignore  build-renderer.cjs  package.json  pnpm-lock.yaml
tauri-app/src-tauri/src/: lib.rs  local_fs.rs  sftp.rs  ssh.rs
views/: index.ejs
views/partials/: connection-dialog.ejs  file-manager.ejs  settings-dialog.ejs  sidebar.ejs  terminal.ejs
