[package]
name = "sshl"
version = "0.2.6"
description = "SSHL - SSH client built with Tauri"
authors = ["qfdk"]
edition = "2021"

[lib]
name = "sshl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools 仅在 debug(tauri dev) 自动启用；release 构建不开 inspector。
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# SSH
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"

# Filesystem & paths
dirs = "5"

# Credential storage (AES-GCM; ciphertext stored in SQLite, master.key separate)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Local store: single SQLite db (connections + encrypted secrets). bundled = 自带 SQLite C 源，无需系统库
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSUserDefaults", "NSString", "NSDictionary"] }
core-text = "20"
core-foundation = "0.9"
